Add authorization support for all endpoints (except swagger docs)
Fix test to support without bearer text inside token header
